--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -9,7 +9,8 @@
     </style>
 
     <div class="example-wrapper">
-        <h1>Hello {{ title }}! ✅</h1>
+        <h1> {{ title }}! ✅</h1>
+        <p> {{ content }} </p>
 
 
     </div>
