--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ title }} {% endblock %}
+{% block title %}Hello Main{% endblock %}
 
 {% block body %}
     <style>
@@ -10,8 +10,10 @@
 
     {% for article in articles %}
         <div class="example-wrapper">
-            <h1> {{ article.title }}! ✅</h1>
-            <p> {{ article.content }} </p>
+            <h1> {{ article.title }} </h1>
+            <p style="font-size: 14px">Автор: {{ article.author}} | {{ article.createdAt | date('Y-m-d') }}</p>
+            <p> {{ article.description | raw }} </p>
+            <p><a href="{{ path('full_article_show', {id: article.id}) }}">Читать далее...</a></p>
         </div>
     {% endfor %}
 
